modules/gdscript/tests/scripts/runtime/errors/for_loop_typed_iterator_error_line.gd
func test() -> void:
    var list = [1, 2, "three"]
    for element: int in list:
        print(element)
